syntax = "proto3";
package delivery;

message CrudAuthData {
	string tenant_id = 1;
	repeated string scopes = 2;
	map<string, string> data = 3;
}

message EntryFilter {
	map<string, EntryFieldFilter> fields = 1;
	repeated EntryFilter and = 2;
	repeated EntryFilter or = 3;
}

message EntryFieldFilter {
	string type = 1;
	string operation = 2;
	string value = 3;
}

message CrudEventMetadata {
	string causation_id = 1;
	string correlation_id = 2;
}
